[FIX] Align items about us

--- a/assets/styles/aboutUs.scss
+++ b/assets/styles/aboutUs.scss
@@ -1,9 +1,3 @@
-.container-aboutus {
-    width: 50%;
-    height: 50;
-    padding-top: 10px;
-}
-
 .title-aboutus {
     padding-left: 20px;
 }
@@ -12,13 +6,6 @@
     padding-top: 50px;
     font-size:25px;
     font-family: "Arial";
-}
-
-.short-description {
-
-/*     width: 700px; */
-/*     width: 800px;
-    padding-bottom: 30px; */
 }
 
 a {
@@ -32,11 +19,5 @@ a:hover {
 }
 
 .photo {
-    width: 250px;
-}
-
-.img-pdp {
-/*     align-items: center; */
-/*     float:right;
-    padding-right: 200px; */
+    width: 300px;
 }
